<resources>
    <string name="app_name">Parstagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Log in</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="signup_email">Email address</string>
    <string name="signup_username">Username</string>
    <string name="signup_password">Password</string>
    <string name="sign_up">Don\'t have an account? Sign up.</string>
    <string name="sign_up_submit">Sign up</string>

    <string name="log_out">Log out</string>

    <string name="comment">Comment</string>
    <string name="comment_error">Error while commenting!</string>
    <string name="comment_empty">Comment cannot be empty!</string>
    <string name="comment_success">Comment added successfully!</string>
</resources>