<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="100dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivInstagram"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        app:srcCompat="@drawable/nav_logo_whiteout" />

    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/signup_email" />

    <EditText
        android:id="@+id/etSignupUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/signup_username" />

    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/signup_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignupSubmit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_weight="1"
        android:backgroundTint="@color/facebookBlue"
        android:text="@string/sign_up_submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</LinearLayout>